--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1013,15 +1013,6 @@ select {
 .top-0 {
   top: 0px;
 }
-.-left-1\.5 {
-  left: -0.375rem;
-}
-.-left-1 {
-  left: -0.25rem;
-}
-.-right-1 {
-  right: -0.25rem;
-}
 .-right-0 {
   right: -0px;
 }
@@ -1736,6 +1727,14 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(251 207 232 / var(--tw-bg-opacity));
 }
+.bg-cyan-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(8 145 178 / var(--tw-bg-opacity));
+}
+.bg-purple-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(168 85 247 / var(--tw-bg-opacity));
+}
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -1768,8 +1767,15 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
+.bg-blue-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
+}
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
+}
+.bg-opacity-0 {
+  --tw-bg-opacity: 0;
 }
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
@@ -1869,6 +1875,10 @@ select {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
 }
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
@@ -1876,10 +1886,6 @@ select {
 .px-16 {
   padding-left: 4rem;
   padding-right: 4rem;
-}
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
 }
 .pt-6 {
   padding-top: 1.5rem;
@@ -2150,10 +2156,6 @@ select {
   --tw-text-opacity: 1;
   color: rgb(96 165 250 / var(--tw-text-opacity));
 }
-.text-lime-500 {
-  --tw-text-opacity: 1;
-  color: rgb(132 204 22 / var(--tw-text-opacity));
-}
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -2299,6 +2301,9 @@ select {
 .first-line\:py-12::first-line {
   padding-top: 3rem;
   padding-bottom: 3rem;
+}
+.hover\:grid-cols-4:hover {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
